--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ header {
     padding: 0%;
     padding-bottom: 20%;
     border-radius: 50px 50px 15px 15px;
+    border: 1px solid;
+    box-shadow: 5px 10px 8px 5px #3f2c16;
 
 }
 
