--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ header {
 }
 
 body {
-    background-image: url("albedo.png");
+    background-image: url("https://theimpulsehour.github.io/website/albedo.png");
 }
 
 
