--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@ header {
     font-family: magneto, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 300%;
+    font-size: 380%;
     color: white;
-    background-color: rgb(52, 164, 255);
+    
+    background: rgb(0,10,112);
+    background: -moz-linear-gradient(0deg, rgba(0,10,112,1) 0%, rgba(9,56,121,1) 4%, rgba(0,212,255,1) 97%);
+    background: -webkit-linear-gradient(0deg, rgba(0,10,112,1) 0%, rgba(9,56,121,1) 4%, rgba(0,212,255,1) 97%);
+    background: linear-gradient(0deg, rgba(0,10,112,1) 0%, rgba(9,56,121,1) 4%, rgba(0,212,255,1) 97%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000a70",endColorstr="#00d4ff",GradientType=1);
+
     padding-top: 20px;
     padding-bottom: 20px;
     border-radius: 50px 50px 0px 0px;
-    border-style:outset;
-    border-width: 10px;
+    border-style: outset;
+    border-width: 0px;
     border-color: rgb(52, 164, 255);
+
+    box-shadow: 0px 10px 10px 1px #000000;
   }
 
 #main {
@@ -30,12 +38,23 @@ header {
     border-radius: 50px 50px 15px 15px;
     border: 1px solid;
     box-shadow: 5px 10px 8px 5px #3f2c16;
+    margin-top: 2%;
+    margin-bottom: 2%;
 
 }
 
 #twitch-embed{
-    padding-top: 2%;
+    margin-top: 2%;
+    padding: 1%;
     max-width: 849px;
+
+    border-radius: 20px;
+
+    background: rgb(0,10,112);
+    background: -moz-linear-gradient(0deg, rgba(0,10,112,1) 0%, rgba(9,56,121,1) 4%, rgba(0,212,255,1) 97%);
+    background: -webkit-linear-gradient(0deg, rgba(0,10,112,1) 0%, rgba(9,56,121,1) 4%, rgba(0,212,255,1) 97%);
+    background: linear-gradient(0deg, rgba(0,10,112,1) 0%, rgba(9,56,121,1) 4%, rgba(0,212,255,1) 97%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000a70",endColorstr="#00d4ff",GradientType=1);
 }
 
 #twitch-embed>iframe{
@@ -57,7 +76,7 @@ body {
   width: 50px;
   text-align: center;
   text-decoration: none;
-  margin: 40%;
+  margin: 35%;
 }
 
 .fa-brands:hover {
